degiskenler dosyası eklendi

--- a/javascript-giris.html
+++ b/javascript-giris.html
@@ -8,10 +8,11 @@
 <body>
     
     <h1>Javascript'e Giriş</h1>
-    <script>
-        console.log("sayfa yüklendi");
-    </script>
-
+    <button onclick="alert('merhaba');">
+        Click me
+    </button>
+    <script src="script.js"
+    type="text/javascript"></script>
 
 </body>
 </html>
